# Disrupting_Diffusion_By_Finding_Critical_Nodes

./: CMakeLists.txt  README.md  differencemain.cpp  main.cpp
InfluenceMaximization/: ApproximationSetting.hpp.gch  DifferenceApproximator.cpp  Diffusion.hpp  Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  RRassociatedGraph.cpp  RRassociatedGraph.hpp  TIMUtility.hpp.gch  memoryusage.h  vertex.cpp  vertex.hpp
InfluenceMaximization/IMResults/: IMResults.h
InfluenceMaximization/TIM-Models/: TIMCoverage.cpp  TIMCoverage.hpp
InfluenceMaximization/sfmt/: SFMT-alti.h.gch  SFMT-common.h.gch  SFMT-neon.h.gch  SFMT-params.h.gch  SFMT-params11213.h.gch  SFMT-params1279.h.gch  SFMT-params132049.h.gch  SFMT-params19937.h.gch  SFMT-params216091.h.gch  SFMT-params2281.h.gch  SFMT-params4253.h.gch  SFMT-params44497.h.gch  SFMT-params607.h.gch  SFMT-params86243.h.gch  SFMT-sse2-msc.h.gch  SFMT-sse2.h.gch  SFMT.h.gch
OnlyResultsFromPreetisCode/: Original_ca-GrQc-processed.txt_Budget_10_Removal_5__RRapproach2_Log.txt.txt  Original_ca-GrQc-processed.txt_FullGraph_results.txt.txt
ResultData/: MY-ca-GrQc-processed_50.txt_Budget_10_Removal_20__RRapproach2_Log.txt  ca-GrQc-processed.txt_Budget_10_Removal_100__RRapproach2_Log.txt  ca-GrQc-processed.txt_Budget_10_Removal_20__RRapproach2_Log.txt
ResultData/EarlierResults/: MY-ca-GrQc-processed_50.txt_Budget_10_Removal_20__RRapproach2_Log.txt  ca-GrQc-processed.txt_Budget_10_Removal_20__RRapproach2_Log.txt  ca-GrQc-processed.txt_Budget_10_Removal_5__RRapproach2_Log.txt  ca-GrQc-processed.txt_Budget_10_Removal_5__RRapproach2_Log_1.txt  ca-GrQc-processed.txt_Budget_10_Removal_5__RRapproach2_Log_2.txt  ca-GrQc-processed.txt_Budget_10_Removal_5__RRapproach2_Log_3.txt  ca-GrQc-processed.txt_Budget_10_Removal_5__RRapproach2_Log_withBug.txt
ResultsFromRemote/: Results_1.xlsx  Results_2.xlsx  soc-sign-epinions.txt_FullGraph_results_15_5.txt  test_output.txt  wtf  ~$Results_2.xlsx
ResultsFromRemote/com-dblp/: com-dblp.ungraph.txt_FullGraph_results_10_10.txt  com-dblp.ungraph.txt_FullGraph_results_10_15.txt  com-dblp.ungraph.txt_FullGraph_results_10_20.txt  com-dblp.ungraph.txt_FullGraph_results_10_5.txt  output_10_10.txt  output_10_15.txt  output_10_20.txt  output_10_5.txt
ResultsFromRemote/soc-epinions/: output_10_10.txt  output_10_15.txt  output_10_20.txt  output_10_5.txt  output_5_10.txt  output_5_15.txt  output_5_20.txt  output_5_5.txt  soc-Epinions1.txt_FullGraph_results_10_10.txt  soc-Epinions1.txt_FullGraph_results_10_15.txt  soc-Epinions1.txt_FullGraph_results_10_20.txt  soc-Epinions1.txt_FullGraph_results_10_5.txt  soc-Epinions1.txt_FullGraph_results_5_10.txt  soc-Epinions1.txt_FullGraph_results_5_15.txt  soc-Epinions1.txt_FullGraph_results_5_20.txt  soc-Epinions1.txt_FullGraph_results_5_5.txt
ResultsFromRemote/soc-sign-epinions/: output_10_10.txt  output_10_15.txt  output_10_20.txt  output_10_5.txt  soc-sign-epinions.txt_FullGraph_results_10_10.txt  (+3 more)
graphs/: MY-ca-GrQc-processed_50.txt  MY-ca-GrQc-processed_50.txt_transposed.txt  ca-CondMat.txt  ca-GrQc-processed.txt  ca-GrQc-processed.txt_transposed.txt  ca-HepTh.txt
results/: ca-GrQc-processed.txt_FullGraph_results.txt  ca-GrQc-processed.txt_FullGraph_results_10_20.txt  ca-GrQc-processed.txt_FullGraph_results_results_tshoot_why_is_the_outdegree_of_0_0.txt  ca-GrQc-processed.txt_FullGraph_results_tshoot_why_is_the_outdegree_of_0_0.txt
(+25 files in other folders)
